# serializer version: 1
# name: test_clear_night[1][clear-night_forecast]
  dict({
    'weather.smhi_test': dict({
      'forecast': list([
        dict({
          'cloud_coverage': 100,
          'condition': 'clear-night',
          'datetime': '2026-04-03T01:00:00+00:00',
          'humidity': 97,
          'precipitation': 0.2,
          'pressure': 1007.8,
          'temperature': 5.0,
          'templow': 5.0,
          'wind_bearing': 193,
          'wind_gust_speed': 6.84,
          'wind_speed': 2.16,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T02:00:00+00:00',
          'humidity': 97,
          'precipitation': 0.3,
          'pressure': 1007.4,
          'temperature': 5.0,
          'templow': 5.0,
          'wind_bearing': 192,
          'wind_gust_speed': 3.96,
          'wind_speed': 2.16,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T03:00:00+00:00',
          'humidity': 97,
          'precipitation': 0.3,
          'pressure': 1007.1,
          'temperature': 4.8,
          'templow': 4.8,
          'wind_bearing': 172,
          'wind_gust_speed': 4.68,
          'wind_speed': 2.52,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T04:00:00+00:00',
          'humidity': 97,
          'precipitation': 0.3,
          'pressure': 1006.9,
          'temperature': 4.7,
          'templow': 4.7,
          'wind_bearing': 32,
          'wind_gust_speed': 4.68,
          'wind_speed': 1.44,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T05:00:00+00:00',
          'humidity': 97,
          'precipitation': 0.3,
          'pressure': 1007.0,
          'temperature': 4.4,
          'templow': 4.4,
          'wind_bearing': 48,
          'wind_gust_speed': 20.16,
          'wind_speed': 10.44,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T06:00:00+00:00',
          'humidity': 97,
          'precipitation': 0.3,
          'pressure': 1007.1,
          'temperature': 4.2,
          'templow': 4.2,
          'wind_bearing': 45,
          'wind_gust_speed': 21.24,
          'wind_speed': 11.16,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T07:00:00+00:00',
          'humidity': 97,
          'precipitation': 0.3,
          'pressure': 1007.4,
          'temperature': 4.0,
          'templow': 4.0,
          'wind_bearing': 79,
          'wind_gust_speed': 23.76,
          'wind_speed': 12.6,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T08:00:00+00:00',
          'humidity': 97,
          'precipitation': 0.4,
          'pressure': 1007.7,
          'temperature': 4.0,
          'templow': 4.0,
          'wind_bearing': 72,
          'wind_gust_speed': 23.76,
          'wind_speed': 11.52,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T09:00:00+00:00',
          'humidity': 96,
          'precipitation': 0.3,
          'pressure': 1007.8,
          'temperature': 3.9,
          'templow': 3.9,
          'wind_bearing': 55,
          'wind_gust_speed': 21.96,
          'wind_speed': 11.52,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T10:00:00+00:00',
          'humidity': 95,
          'precipitation': 0.2,
          'pressure': 1007.9,
          'temperature': 3.7,
          'templow': 3.7,
          'wind_bearing': 44,
          'wind_gust_speed': 22.32,
          'wind_speed': 10.8,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T11:00:00+00:00',
          'humidity': 94,
          'precipitation': 0.2,
          'pressure': 1008.1,
          'temperature': 3.3,
          'templow': 3.3,
          'wind_bearing': 31,
          'wind_gust_speed': 21.24,
          'wind_speed': 10.44,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T12:00:00+00:00',
          'humidity': 94,
          'precipitation': 0.2,
          'pressure': 1008.1,
          'temperature': 3.1,
          'templow': 3.1,
          'wind_bearing': 27,
          'wind_gust_speed': 20.16,
          'wind_speed': 9.72,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T13:00:00+00:00',
          'humidity': 93,
          'precipitation': 0.1,
          'pressure': 1008.0,
          'temperature': 3.2,
          'templow': 3.2,
          'wind_bearing': 30,
          'wind_gust_speed': 18.72,
          'wind_speed': 7.92,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-03T14:00:00+00:00',
          'humidity': 93,
          'precipitation': 0.1,
          'pressure': 1008.0,
          'temperature': 3.3,
          'templow': 3.3,
          'wind_bearing': 19,
          'wind_gust_speed': 15.12,
          'wind_speed': 5.04,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-03T15:00:00+00:00',
          'humidity': 93,
          'precipitation': 0.0,
          'pressure': 1007.6,
          'temperature': 3.4,
          'templow': 3.4,
          'wind_bearing': 19,
          'wind_gust_speed': 10.44,
          'wind_speed': 5.04,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-03T16:00:00+00:00',
          'humidity': 93,
          'precipitation': 0.0,
          'pressure': 1007.5,
          'temperature': 3.5,
          'templow': 3.5,
          'wind_bearing': 13,
          'wind_gust_speed': 10.44,
          'wind_speed': 4.68,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-03T17:00:00+00:00',
          'humidity': 93,
          'precipitation': 0.0,
          'pressure': 1007.6,
          'temperature': 3.4,
          'templow': 3.4,
          'wind_bearing': 349,
          'wind_gust_speed': 9.36,
          'wind_speed': 2.52,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-03T18:00:00+00:00',
          'humidity': 95,
          'precipitation': 0.0,
          'pressure': 1007.7,
          'temperature': 2.9,
          'templow': 2.9,
          'wind_bearing': 259,
          'wind_gust_speed': 6.12,
          'wind_speed': 2.88,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-03T19:00:00+00:00',
          'humidity': 96,
          'precipitation': 0.0,
          'pressure': 1007.5,
          'temperature': 2.3,
          'templow': 2.3,
          'wind_bearing': 248,
          'wind_gust_speed': 8.64,
          'wind_speed': 3.96,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-03T20:00:00+00:00',
          'humidity': 97,
          'precipitation': 0.0,
          'pressure': 1006.9,
          'temperature': 2.0,
          'templow': 2.0,
          'wind_bearing': 126,
          'wind_gust_speed': 7.56,
          'wind_speed': 3.6,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-03T21:00:00+00:00',
          'humidity': 97,
          'precipitation': 0.0,
          'pressure': 1006.7,
          'temperature': 1.9,
          'templow': 1.9,
          'wind_bearing': 177,
          'wind_gust_speed': 11.16,
          'wind_speed': 5.76,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-03T22:00:00+00:00',
          'humidity': 98,
          'precipitation': 0.0,
          'pressure': 1006.0,
          'temperature': 1.8,
          'templow': 1.8,
          'wind_bearing': 169,
          'wind_gust_speed': 12.24,
          'wind_speed': 5.04,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-03T23:00:00+00:00',
          'humidity': 97,
          'precipitation': 0.0,
          'pressure': 1005.5,
          'temperature': 1.9,
          'templow': 1.9,
          'wind_bearing': 193,
          'wind_gust_speed': 14.76,
          'wind_speed': 7.56,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-04T00:00:00+00:00',
          'humidity': 97,
          'precipitation': 0.0,
          'pressure': 1004.6,
          'temperature': 1.9,
          'templow': 1.9,
          'wind_bearing': 161,
          'wind_gust_speed': 14.76,
          'wind_speed': 7.56,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-04T01:00:00+00:00',
          'humidity': 96,
          'precipitation': 0.0,
          'pressure': 1003.9,
          'temperature': 1.8,
          'templow': 1.8,
          'wind_bearing': 172,
          'wind_gust_speed': 16.56,
          'wind_speed': 7.92,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-04T02:00:00+00:00',
          'humidity': 95,
          'precipitation': 0.2,
          'pressure': 1003.2,
          'temperature': 1.7,
          'templow': 1.7,
          'wind_bearing': 169,
          'wind_gust_speed': 15.84,
          'wind_speed': 8.64,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-04T03:00:00+00:00',
          'humidity': 95,
          'precipitation': 0.5,
          'pressure': 1002.3,
          'temperature': 1.7,
          'templow': 1.7,
          'wind_bearing': 159,
          'wind_gust_speed': 16.2,
          'wind_speed': 8.64,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-04T04:00:00+00:00',
          'humidity': 95,
          'precipitation': 0.6,
          'pressure': 1001.7,
          'temperature': 1.5,
          'templow': 1.5,
          'wind_bearing': 180,
          'wind_gust_speed': 21.6,
          'wind_speed': 11.16,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-04T05:00:00+00:00',
          'humidity': 96,
          'precipitation': 0.5,
          'pressure': 1001.3,
          'temperature': 1.7,
          'templow': 1.7,
          'wind_bearing': 191,
          'wind_gust_speed': 23.04,
          'wind_speed': 11.16,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-04T06:00:00+00:00',
          'humidity': 93,
          'precipitation': 0.3,
          'pressure': 1001.0,
          'temperature': 2.8,
          'templow': 2.8,
          'wind_bearing': 209,
          'wind_gust_speed': 23.04,
          'wind_speed': 12.24,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-04T07:00:00+00:00',
          'humidity': 90,
          'precipitation': 0.3,
          'pressure': 1000.9,
          'temperature': 3.6,
          'templow': 3.6,
          'wind_bearing': 233,
          'wind_gust_speed': 27.0,
          'wind_speed': 14.4,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-04T08:00:00+00:00',
          'humidity': 82,
          'precipitation': 0.2,
          'pressure': 1001.0,
          'temperature': 4.3,
          'templow': 4.3,
          'wind_bearing': 253,
          'wind_gust_speed': 45.0,
          'wind_speed': 24.48,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-04T09:00:00+00:00',
          'humidity': 79,
          'precipitation': 0.1,
          'pressure': 1001.1,
          'temperature': 5.0,
          'templow': 5.0,
          'wind_bearing': 257,
          'wind_gust_speed': 45.0,
          'wind_speed': 22.68,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-04T10:00:00+00:00',
          'humidity': 74,
          'precipitation': 0.1,
          'pressure': 1001.2,
          'temperature': 5.7,
          'templow': 5.7,
          'wind_bearing': 261,
          'wind_gust_speed': 45.0,
          'wind_speed': 24.48,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-04T11:00:00+00:00',
          'humidity': 69,
          'precipitation': 0.1,
          'pressure': 1001.4,
          'temperature': 6.3,
          'templow': 6.3,
          'wind_bearing': 269,
          'wind_gust_speed': 47.52,
          'wind_speed': 25.56,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-04T12:00:00+00:00',
          'humidity': 64,
          'precipitation': 0.1,
          'pressure': 1001.9,
          'temperature': 7.1,
          'templow': 7.1,
          'wind_bearing': 277,
          'wind_gust_speed': 47.88,
          'wind_speed': 25.2,
        }),
        dict({
          'cloud_coverage': 88,
          'condition': 'partlycloudy',
          'datetime': '2026-04-04T13:00:00+00:00',
          'humidity': 59,
          'precipitation': 0.0,
          'pressure': 1002.4,
          'temperature': 7.8,
          'templow': 7.8,
          'wind_bearing': 294,
          'wind_gust_speed': 47.88,
          'wind_speed': 23.04,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2026-04-04T14:00:00+00:00',
          'humidity': 54,
          'precipitation': 0.0,
          'pressure': 1003.1,
          'temperature': 8.4,
          'templow': 8.4,
          'wind_bearing': 289,
          'wind_gust_speed': 51.12,
          'wind_speed': 27.36,
        }),
        dict({
          'cloud_coverage': 62,
          'condition': 'partlycloudy',
          'datetime': '2026-04-04T15:00:00+00:00',
          'humidity': 51,
          'precipitation': 0.0,
          'pressure': 1003.8,
          'temperature': 8.4,
          'templow': 8.4,
          'wind_bearing': 290,
          'wind_gust_speed': 53.28,
          'wind_speed': 27.0,
        }),
        dict({
          'cloud_coverage': 50,
          'condition': 'partlycloudy',
          'datetime': '2026-04-04T16:00:00+00:00',
          'humidity': 51,
          'precipitation': 0.0,
          'pressure': 1004.7,
          'temperature': 8.1,
          'templow': 8.1,
          'wind_bearing': 288,
          'wind_gust_speed': 50.4,
          'wind_speed': 24.48,
        }),
        dict({
          'cloud_coverage': 38,
          'condition': 'sunny',
          'datetime': '2026-04-04T17:00:00+00:00',
          'humidity': 52,
          'precipitation': 0.0,
          'pressure': 1005.6,
          'temperature': 7.6,
          'templow': 7.6,
          'wind_bearing': 280,
          'wind_gust_speed': 44.28,
          'wind_speed': 20.52,
        }),
        dict({
          'cloud_coverage': 0,
          'condition': 'clear-night',
          'datetime': '2026-04-04T18:00:00+00:00',
          'humidity': 56,
          'precipitation': 0.0,
          'pressure': 1006.5,
          'temperature': 6.2,
          'templow': 6.2,
          'wind_bearing': 271,
          'wind_gust_speed': 37.08,
          'wind_speed': 18.0,
        }),
        dict({
          'cloud_coverage': 0,
          'condition': 'clear-night',
          'datetime': '2026-04-04T19:00:00+00:00',
          'humidity': 64,
          'precipitation': 0.0,
          'pressure': 1007.3,
          'temperature': 5.1,
          'templow': 5.1,
          'wind_bearing': 254,
          'wind_gust_speed': 32.76,
          'wind_speed': 14.04,
        }),
        dict({
          'cloud_coverage': 0,
          'condition': 'clear-night',
          'datetime': '2026-04-04T20:00:00+00:00',
          'humidity': 75,
          'precipitation': 0.0,
          'pressure': 1008.1,
          'temperature': 3.9,
          'templow': 3.9,
          'wind_bearing': 257,
          'wind_gust_speed': 25.56,
          'wind_speed': 14.04,
        }),
        dict({
          'cloud_coverage': 0,
          'condition': 'clear-night',
          'datetime': '2026-04-04T21:00:00+00:00',
          'humidity': 82,
          'precipitation': 0.0,
          'pressure': 1008.8,
          'temperature': 2.8,
          'templow': 2.8,
          'wind_bearing': 265,
          'wind_gust_speed': 25.2,
          'wind_speed': 10.44,
        }),
        dict({
          'cloud_coverage': 0,
          'condition': 'clear-night',
          'datetime': '2026-04-04T22:00:00+00:00',
          'humidity': 86,
          'precipitation': 0.0,
          'pressure': 1009.5,
          'temperature': 1.7,
          'templow': 1.7,
          'wind_bearing': 251,
          'wind_gust_speed': 18.36,
          'wind_speed': 8.64,
        }),
      ]),
    }),
  })
# ---
# name: test_clear_night[1][clear_night]
  ReadOnlyDict({
    'attribution': 'Swedish weather institute (SMHI)',
    'cloud_coverage': 100,
    'friendly_name': 'Test',
    'humidity': 97,
    'precipitation_unit': <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
    'pressure': 1008.2,
    'pressure_unit': <UnitOfPressure.HPA: 'hPa'>,
    'supported_features': <WeatherEntityFeature: 7>,
    'temperature': 5.3,
    'temperature_unit': <UnitOfTemperature.CELSIUS: '°C'>,
    'thunder_probability': 1,
    'visibility': 8.3,
    'visibility_unit': <UnitOfLength.KILOMETERS: 'km'>,
    'wind_bearing': 138,
    'wind_gust_speed': 4.32,
    'wind_speed': 1.8,
    'wind_speed_unit': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_forecast_service[load_platforms0]
  dict({
    'weather.smhi_test': dict({
      'forecast': list([
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-02T12:00:00+00:00',
          'humidity': 79,
          'precipitation': 0.9,
          'pressure': 1011.3,
          'temperature': 10.4,
          'templow': 5.7,
          'wind_bearing': 245,
          'wind_gust_speed': 24.12,
          'wind_speed': 11.16,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T12:00:00+00:00',
          'humidity': 94,
          'precipitation': 3.7,
          'pressure': 1008.1,
          'temperature': 5.3,
          'templow': 1.8,
          'wind_bearing': 27,
          'wind_gust_speed': 20.16,
          'wind_speed': 9.72,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-04T12:00:00+00:00',
          'humidity': 64,
          'precipitation': 3.0,
          'pressure': 1001.9,
          'temperature': 8.4,
          'templow': 1.5,
          'wind_bearing': 277,
          'wind_gust_speed': 47.88,
          'wind_speed': 25.2,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-05T12:00:00+00:00',
          'humidity': 81,
          'precipitation': 17.4,
          'pressure': 999.0,
          'temperature': 8.3,
          'templow': 2.1,
          'wind_bearing': 182,
          'wind_gust_speed': 46.8,
          'wind_speed': 24.84,
        }),
        dict({
          'cloud_coverage': 88,
          'condition': 'partlycloudy',
          'datetime': '2026-04-06T12:00:00+00:00',
          'humidity': 40,
          'precipitation': 4.8,
          'pressure': 1001.5,
          'temperature': 10.3,
          'templow': 4.0,
          'wind_bearing': 290,
          'wind_gust_speed': 70.56,
          'wind_speed': 34.2,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2026-04-07T12:00:00+00:00',
          'humidity': 37,
          'precipitation': 0.0,
          'pressure': 1021.1,
          'temperature': 10.3,
          'templow': 5.2,
          'wind_bearing': 352,
          'wind_gust_speed': 45.0,
          'wind_speed': 21.96,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2026-04-08T12:00:00+00:00',
          'humidity': 57,
          'precipitation': 0.0,
          'pressure': 1028.8,
          'temperature': 7.8,
          'templow': 2.2,
          'wind_bearing': 46,
          'wind_gust_speed': 38.16,
          'wind_speed': 17.28,
        }),
        dict({
          'cloud_coverage': 62,
          'condition': 'partlycloudy',
          'datetime': '2026-04-09T12:00:00+00:00',
          'humidity': 48,
          'precipitation': 1.2,
          'pressure': 1024.4,
          'temperature': 6.5,
          'templow': -1.5,
          'wind_bearing': 104,
          'wind_gust_speed': 37.08,
          'wind_speed': 18.0,
        }),
        dict({
          'cloud_coverage': 62,
          'condition': 'partlycloudy',
          'datetime': '2026-04-10T12:00:00+00:00',
          'humidity': 47,
          'precipitation': 13.2,
          'pressure': 1020.2,
          'temperature': 6.7,
          'templow': -0.1,
          'wind_bearing': 103,
          'wind_gust_speed': 37.44,
          'wind_speed': 17.28,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2026-04-11T12:00:00+00:00',
          'humidity': 50,
          'precipitation': 9.6,
          'pressure': 1016.6,
          'temperature': 7.4,
          'templow': 0.6,
          'wind_bearing': 136,
          'wind_gust_speed': 41.4,
          'wind_speed': 19.8,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2026-04-12T12:00:00+00:00',
          'humidity': 51,
          'precipitation': 16.8,
          'pressure': 1016.3,
          'temperature': 8.3,
          'templow': 1.8,
          'wind_bearing': 119,
          'wind_gust_speed': 39.96,
          'wind_speed': 18.36,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_services[load_platforms0]
  dict({
    'cloud_coverage': 100,
    'condition': 'cloudy',
    'datetime': '2026-04-02T12:00:00+00:00',
    'humidity': 79,
    'precipitation': 0.9,
    'pressure': 1011.3,
    'temperature': 10.4,
    'templow': 5.7,
    'wind_bearing': 245,
    'wind_gust_speed': 24.12,
    'wind_speed': 11.16,
  })
# ---
# name: test_forecast_services[load_platforms0].1
  dict({
    'cloud_coverage': 75,
    'condition': 'partlycloudy',
    'datetime': '2026-04-08T12:00:00+00:00',
    'humidity': 57,
    'precipitation': 0.0,
    'pressure': 1028.8,
    'temperature': 7.8,
    'templow': 2.2,
    'wind_bearing': 46,
    'wind_gust_speed': 38.16,
    'wind_speed': 17.28,
  })
# ---
# name: test_forecast_services[load_platforms0].2
  dict({
    'cloud_coverage': 100,
    'condition': 'cloudy',
    'datetime': '2026-04-02T12:00:00+00:00',
    'humidity': 79,
    'precipitation': 0.0,
    'pressure': 1011.3,
    'temperature': 10.4,
    'templow': 10.4,
    'wind_bearing': 245,
    'wind_gust_speed': 24.12,
    'wind_speed': 11.16,
  })
# ---
# name: test_forecast_services[load_platforms0].3
  dict({
    'cloud_coverage': 100,
    'condition': 'cloudy',
    'datetime': '2026-04-02T18:00:00+00:00',
    'humidity': 98,
    'precipitation': 0.0,
    'pressure': 1009.7,
    'temperature': 7.2,
    'templow': 7.2,
    'wind_bearing': 180,
    'wind_gust_speed': 6.48,
    'wind_speed': 3.24,
  })
# ---
# name: test_setup_hass[load_platforms0]
  ReadOnlyDict({
    'attribution': 'Swedish weather institute (SMHI)',
    'cloud_coverage': 100,
    'friendly_name': 'Test',
    'humidity': 80,
    'precipitation_unit': <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
    'pressure': 1011.5,
    'pressure_unit': <UnitOfPressure.HPA: 'hPa'>,
    'supported_features': <WeatherEntityFeature: 7>,
    'temperature': 10.4,
    'temperature_unit': <UnitOfTemperature.CELSIUS: '°C'>,
    'thunder_probability': 0,
    'visibility': 17.9,
    'visibility_unit': <UnitOfLength.KILOMETERS: 'km'>,
    'wind_bearing': 255,
    'wind_gust_speed': 24.48,
    'wind_speed': 12.24,
    'wind_speed_unit': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_twice_daily_forecast_service[load_platforms0]
  dict({
    'weather.smhi_test': dict({
      'forecast': list([
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-02T11:00:00+00:00',
          'humidity': 80,
          'is_daytime': False,
          'precipitation': 0.0,
          'pressure': 1011.5,
          'temperature': 10.4,
          'templow': 10.4,
          'wind_bearing': 255,
          'wind_gust_speed': 24.48,
          'wind_speed': 12.24,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-02T12:00:00+00:00',
          'humidity': 79,
          'is_daytime': True,
          'precipitation': 0.0,
          'pressure': 1011.3,
          'temperature': 10.4,
          'templow': 10.4,
          'wind_bearing': 245,
          'wind_gust_speed': 24.12,
          'wind_speed': 11.16,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T00:00:00+00:00',
          'humidity': 97,
          'is_daytime': False,
          'precipitation': 0.2,
          'pressure': 1008.2,
          'temperature': 10.4,
          'templow': 5.3,
          'wind_bearing': 138,
          'wind_gust_speed': 4.32,
          'wind_speed': 1.8,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-03T12:00:00+00:00',
          'humidity': 94,
          'is_daytime': True,
          'precipitation': 0.2,
          'pressure': 1008.1,
          'temperature': 10.4,
          'templow': 3.1,
          'wind_bearing': 27,
          'wind_gust_speed': 20.16,
          'wind_speed': 9.72,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-04T00:00:00+00:00',
          'humidity': 97,
          'is_daytime': False,
          'precipitation': 0.0,
          'pressure': 1004.6,
          'temperature': 10.4,
          'templow': 1.9,
          'wind_bearing': 161,
          'wind_gust_speed': 14.76,
          'wind_speed': 7.56,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'cloudy',
          'datetime': '2026-04-04T12:00:00+00:00',
          'humidity': 64,
          'is_daytime': True,
          'precipitation': 0.1,
          'pressure': 1001.9,
          'temperature': 10.4,
          'templow': 7.1,
          'wind_bearing': 277,
          'wind_gust_speed': 47.88,
          'wind_speed': 25.2,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2026-04-05T00:00:00+00:00',
          'humidity': 82,
          'is_daytime': False,
          'precipitation': 0.0,
          'pressure': 1009.4,
          'temperature': 10.4,
          'templow': 2.3,
          'wind_bearing': 254,
          'wind_gust_speed': 30.24,
          'wind_speed': 15.48,
        }),
        dict({
          'cloud_coverage': 100,
          'condition': 'rainy',
          'datetime': '2026-04-05T12:00:00+00:00',
          'humidity': 81,
          'is_daytime': True,
          'precipitation': 10.8,
          'pressure': 999.0,
          'temperature': 10.4,
          'templow': 8.3,
          'wind_bearing': 182,
          'wind_gust_speed': 46.8,
          'wind_speed': 24.84,
        }),
        dict({
          'cloud_coverage': 88,
          'condition': 'partlycloudy',
          'datetime': '2026-04-06T00:00:00+00:00',
          'humidity': 69,
          'is_daytime': False,
          'precipitation': 1.2,
          'pressure': 995.0,
          'temperature': 10.4,
          'templow': 4.0,
          'wind_bearing': 240,
          'wind_gust_speed': 60.84,
          'wind_speed': 31.68,
        }),
        dict({
          'cloud_coverage': 88,
          'condition': 'partlycloudy',
          'datetime': '2026-04-06T12:00:00+00:00',
          'humidity': 40,
          'is_daytime': True,
          'precipitation': 1.2,
          'pressure': 1001.5,
          'temperature': 10.4,
          'templow': 10.3,
          'wind_bearing': 290,
          'wind_gust_speed': 70.56,
          'wind_speed': 34.2,
        }),
        dict({
          'cloud_coverage': 0,
          'condition': 'clear-night',
          'datetime': '2026-04-07T00:00:00+00:00',
          'humidity': 57,
          'is_daytime': False,
          'precipitation': 0.0,
          'pressure': 1013.3,
          'temperature': 10.4,
          'templow': 5.4,
          'wind_bearing': 315,
          'wind_gust_speed': 36.0,
          'wind_speed': 19.08,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2026-04-07T12:00:00+00:00',
          'humidity': 37,
          'is_daytime': True,
          'precipitation': 0.0,
          'pressure': 1021.1,
          'temperature': 10.4,
          'templow': 10.3,
          'wind_bearing': 352,
          'wind_gust_speed': 45.0,
          'wind_speed': 21.96,
        }),
        dict({
          'cloud_coverage': 25,
          'condition': 'clear-night',
          'datetime': '2026-04-08T00:00:00+00:00',
          'humidity': 83,
          'is_daytime': False,
          'precipitation': 0.0,
          'pressure': 1027.0,
          'temperature': 10.4,
          'templow': 2.2,
          'wind_bearing': 3,
          'wind_gust_speed': 23.4,
          'wind_speed': 12.6,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2026-04-08T12:00:00+00:00',
          'humidity': 57,
          'is_daytime': True,
          'precipitation': 0.0,
          'pressure': 1028.8,
          'temperature': 10.4,
          'templow': 7.8,
          'wind_bearing': 46,
          'wind_gust_speed': 38.16,
          'wind_speed': 17.28,
        }),
        dict({
          'cloud_coverage': 12,
          'condition': 'clear-night',
          'datetime': '2026-04-09T00:00:00+00:00',
          'humidity': 85,
          'is_daytime': False,
          'precipitation': 0.0,
          'pressure': 1028.4,
          'temperature': 10.4,
          'templow': -1.5,
          'wind_bearing': 57,
          'wind_gust_speed': 25.92,
          'wind_speed': 10.8,
        }),
        dict({
          'cloud_coverage': 62,
          'condition': 'partlycloudy',
          'datetime': '2026-04-09T12:00:00+00:00',
          'humidity': 48,
          'is_daytime': True,
          'precipitation': 1.2,
          'pressure': 1024.4,
          'temperature': 10.4,
          'templow': 6.5,
          'wind_bearing': 104,
          'wind_gust_speed': 37.08,
          'wind_speed': 18.0,
        }),
        dict({
          'cloud_coverage': 62,
          'condition': 'partlycloudy',
          'datetime': '2026-04-10T00:00:00+00:00',
          'humidity': 82,
          'is_daytime': False,
          'precipitation': 7.2,
          'pressure': 1021.1,
          'temperature': 10.4,
          'templow': -0.1,
          'wind_bearing': 87,
          'wind_gust_speed': 28.44,
          'wind_speed': 12.6,
        }),
        dict({
          'cloud_coverage': 62,
          'condition': 'partlycloudy',
          'datetime': '2026-04-10T12:00:00+00:00',
          'humidity': 47,
          'is_daytime': True,
          'precipitation': 6.0,
          'pressure': 1020.2,
          'temperature': 10.4,
          'templow': 6.7,
          'wind_bearing': 103,
          'wind_gust_speed': 37.44,
          'wind_speed': 17.28,
        }),
        dict({
          'cloud_coverage': 62,
          'condition': 'partlycloudy',
          'datetime': '2026-04-11T00:00:00+00:00',
          'humidity': 79,
          'is_daytime': False,
          'precipitation': 1.2,
          'pressure': 1019.0,
          'temperature': 10.4,
          'templow': 0.6,
          'wind_bearing': 111,
          'wind_gust_speed': 25.92,
          'wind_speed': 11.52,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2026-04-11T12:00:00+00:00',
          'humidity': 50,
          'is_daytime': True,
          'precipitation': 8.4,
          'pressure': 1016.6,
          'temperature': 10.4,
          'templow': 7.4,
          'wind_bearing': 136,
          'wind_gust_speed': 41.4,
          'wind_speed': 19.8,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2026-04-12T00:00:00+00:00',
          'humidity': 79,
          'is_daytime': False,
          'precipitation': 9.6,
          'pressure': 1016.4,
          'temperature': 10.4,
          'templow': 1.8,
          'wind_bearing': 125,
          'wind_gust_speed': 29.16,
          'wind_speed': 12.96,
        }),
        dict({
          'cloud_coverage': 75,
          'condition': 'partlycloudy',
          'datetime': '2026-04-12T12:00:00+00:00',
          'humidity': 51,
          'is_daytime': True,
          'precipitation': 7.2,
          'pressure': 1016.3,
          'temperature': 10.4,
          'templow': 8.3,
          'wind_bearing': 119,
          'wind_gust_speed': 39.96,
          'wind_speed': 18.36,
        }),
      ]),
    }),
  })
# ---
